# all_interview

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.md  todo_sentiment_analysis.md
.github/workflows/: build-and-deploy.yml  test-and-lint.yml
docs/: api_documentation.md  architecture.md  ci_cd_setup.md  feddit_api.md  requirements.md  setup_guide.md
src/sentiment_analysis/: __init__.py  config.py  logger.py
src/sentiment_analysis/api/: __init__.py  dependencies.py  dto.py  main.py  routes.py  run.py
src/sentiment_analysis/application/services/: sentiment_analysis_service.py  sentiment_service.py
src/sentiment_analysis/application/use_cases/: analyze_sentiment.py  fetch_comments.py  fetch_subfeddits.py
src/sentiment_analysis/domain/entities/: comment.py  sentiment_analysis.py  subfeddit.py
src/sentiment_analysis/domain/repositories/: comment_repository.py  sentiment_analysis_repository.py  subfeddit_repository.py
src/sentiment_analysis/infrastructure/: container.py  sentiment_analyzer.py
src/sentiment_analysis/infrastructure/clients/: feddit_client.py
src/sentiment_analysis/infrastructure/repositories/: feddit_comment_repository.py  feddit_subfeddit_repository.py  memory_sentiment_analysis_repository.py  sentiment_analysis_repository.py
src/sentiment_analysis/infrastructure/services/: feddit_client.py
src/sentiment_analysis/models/: __init__.py  comment.py  subfeddit.py
src/sentiment_analysis/services/: __init__.py  feddit_client.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/integration/api/: test_api.py
tests/unit/: __init__.py  test_feddit_client.py  test_import.py  test_logger.py
tests/unit/api/: test_dependencies.py
tests/unit/application/services/: test_sentiment_service.py
tests/unit/application/use_cases/: test_analyze_sentiment.py  test_fetch_comments.py  test_fetch_subfeddits.py
tests/unit/domain/entities/: test_comment.py  test_sentiment_analysis.py  test_subfeddit.py
tests/unit/domain/repositories/: test_comment_repository.py  test_subfeddit_repository.py
tests/unit/infrastructure/: test_sentiment_analyzer.py
tests/unit/infrastructure/clients/: test_feddit_client.py
(+1 files in other folders)
